--- a/wright-tire-website/src/components/WriteUpContainer/styles.css
+++ b/wright-tire-website/src/components/WriteUpContainer/styles.css
@@ -1,9 +1,7 @@
 .write-up-container {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 1fr 4fr;
     grid-column-gap: 0px;
-    grid-row-gap: 0px;
 
     background-color: lightgray;
     }
@@ -18,6 +16,15 @@
 
     .col-3 {
         grid-column-start: 3;
+    }
+
+    .write-up-list-grid-position {
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+
+    .write-up-main-grid-position {
+        grid-row-start: 2;
     }
 
     .test-border {
