--- a/wright-tire-website/src/components/WriteUpAdminButtons/styles.css
+++ b/wright-tire-website/src/components/WriteUpAdminButtons/styles.css
@@ -1,3 +1,9 @@
+.admin-button-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
 button {
     padding: 10px;
 }
