--- a/wright-tire-website/src/components/WriteUpContainer/styles.css
+++ b/wright-tire-website/src/components/WriteUpContainer/styles.css
@@ -2,8 +2,9 @@
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-column-gap: 0px;
-
-    background-color: lightgray;
+    background-color: #9BB1CC;
+    /* background-color: lightgray; */
+    /*https://coolors.co/2c3642-9bb1cc-6c91bf-f2f6fa-919191 */
     height: 100vh;
     width: 100vw;
     }
